--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,30 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <!--My정보에 들어갈 String-->
+    <string name="Cancel">취소</string>
+    <string name="UserName">User1</string>
+    <string name="Change">수정</string>
+    <string name="MyInfo">MY 정보</string>
+    <string name="Sex">성별</string>
+    <string name="Age">나이</string>
+    <string name="Height">키</string>
+    <string name="Weight">몸무게</string>
+    <string name="BMI">BMI</string>
+    <string name="Obesity">비만</string>
+    <string name="OneDayCalorie">일일 권장 칼로리</string>
+    <string name="UserCalorie">2600KCAL</string>
+    <string name="UserClass">천사</string>
+    <string name="CurrentExp">현재 경험치</string>
+    <string name="AchieveCount">업적달성횟수</string>
+    <string name="UserAchieveCountTotal">250회</string>
+    <string name="UserSex">남성</string>
+    <string name="UserAge">27세</string>
+    <string name="UserHeight">180CM</string>
+    <string name="UserWeight">87KG</string>
+    <string name="UserBMI">26.85</string>
+    <string name="UserAchievePercent">50%</string>
+    <string name="UserAchieveCountCurrent">75회</string>
+
     <string name="action_settings">Settings</string>
 </resources>
