--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,13 +22,22 @@
     <string name="AchieveCount">업적달성횟수</string>
     <string name="UserAchieveCountTotal">250회</string>
     <string name="UserSex">남성</string>
-
     <string name="UserAge">27세</string>
     <string name="UserHeight">180CM</string>
     <string name="UserWeight">87KG</string>
     <string name="UserBMI">26.85</string>
     <string name="UserAchievePercent">50%</string>
     <string name="UserAchieveCountCurrent">75회</string>
+
+    <!--My정보 수정에 들어갈 String-->
+    <string name="MyInfoChange">신체 정보 수정</string>
+    <string name="Man">남자</string>
+    <string name="Woman">여자</string>
+    <string name="Complete">완료</string>
+    <string name="Nickname">닉네임</string>
+
+
+
 
     <string name="action_settings">Settings</string>
 </resources>
