MY 운동 메뉴 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,9 +90,12 @@
     <string name="BodyInfo">신체정보</string>
 
     <!--My식단에 들어갈 string-->
-    <string name="MyFood">My 식단</string>
+    <string name="MyFood">MY 식단</string>
     <string name="Add">추가</string>
     <string name="Delete">삭제</string>
+
+    <!--My운동에 들어갈 string-->
+    <string name="MyExercise">MY 운동</string>
 
 
 
